# eterna_labs_assignment

./: README.md  main.py  pyproject.toml
static/: index.html
